cabal-version:      2.4
name:               hson
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ParkerGits
maintainer:         parkerjlandon@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Native,
      Parser,
      Opts,
      IO,
      JSONParser,
      Lexer,
      HSONValue,
      Interpreter

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
     aeson,
     aeson-pretty,
     base >=4.7 && <5,
     bytestring,
     containers,
     mtl,
     optparse-applicative,
     parsec,
     scientific,
     text,
     vector,
    hs-source-dirs:   src
    default-language: Haskell2010

executable hson
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hson,

    hs-source-dirs:   app
    default-language: Haskell2010
